// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Popular Scoring Integration Tests - Real TMDB Data > should apply genre filtering to popular results > popular-action-genre-filter 1`] = `
[
  {
    "genres": [
      "Action",
      "Thriller",
      "Music",
      "Horror",
    ],
    "name": "Pretty Lethal",
    "type": "movie",
  },
  {
    "genres": [
      "Thriller",
      "Action",
      "Drama",
    ],
    "name": "Humint",
    "type": "movie",
  },
  {
    "genres": [
      "Action",
      "Crime",
      "Thriller",
    ],
    "name": "Shelter",
    "type": "movie",
  },
  {
    "genres": [
      "Action",
      "Comedy",
      "Horror",
    ],
    "name": "They Will Kill You",
    "type": "movie",
  },
  {
    "genres": [
      "Action",
      "Science Fiction",
      "Thriller",
    ],
    "name": "War Machine",
    "type": "movie",
  },
  {
    "genres": [
      "Science Fiction",
      "Action",
      "Thriller",
    ],
    "name": "Mercy",
    "type": "movie",
  },
  {
    "genres": [
      "Animation",
      "Action",
      "Fantasy",
    ],
    "name": "Demon Slayer: Kimetsu no Yaiba Infinity Castle",
    "type": "movie",
  },
  {
    "genres": [
      "Animation",
      "Action",
      "Fantasy",
    ],
    "name": "JUJUTSU KAISEN",
    "type": "tv",
  },
  {
    "genres": [
      "Crime",
      "Drama",
      "Action",
    ],
    "name": "NCIS",
    "type": "tv",
  },
  {
    "genres": [
      "Fantasy",
      "Action",
      "Drama",
    ],
    "name": "Smallville",
    "type": "tv",
  },
  {
    "genres": [
      "Action",
      "Drama",
      "Fantasy",
    ],
    "name": "Doctor Who",
    "type": "tv",
  },
]
`;

exports[`Popular Scoring Integration Tests - Real TMDB Data > should compute stats from real fixtures (use to update TMDB_STAT_DEFAULTS) > tmdb-stat-defaults 1`] = `
{
  "maxAvgRating": 8,
  "maxPopularity": 1319,
  "maxVoteCount": 10935,
  "minPopularity": 3,
  "minVoteCount": 0,
  "movieStats": {
    "maxAvgRating": 6.7935185185185185,
    "maxPopularity": 1318.7141,
    "maxVoteCount": 10402,
    "minPopularity": 3.1389,
    "minVoteCount": 0,
  },
  "tvStats": {
    "maxAvgRating": 7.723699999999999,
    "maxPopularity": 375.816,
    "maxVoteCount": 10935,
    "minPopularity": 157.4127,
    "minVoteCount": 205,
  },
}
`;

exports[`Popular Scoring Integration Tests - Real TMDB Data > should mix movies and TV shows in popular results > popular-type-distribution 1`] = `
{
  "items": [
    {
      "name": "Your Heart Will Be Broken",
      "tmdbId": 1523145,
      "type": "movie",
    },
    {
      "name": "Project Hail Mary",
      "tmdbId": 687163,
      "type": "movie",
    },
    {
      "name": "The Super Mario Galaxy Movie",
      "tmdbId": 1226863,
      "type": "movie",
    },
    {
      "name": "Mike & Nick & Nick & Alice",
      "tmdbId": 1115544,
      "type": "movie",
    },
    {
      "name": "Crime 101",
      "tmdbId": 1171145,
      "type": "movie",
    },
    {
      "name": "GOAT",
      "tmdbId": 1297842,
      "type": "movie",
    },
    {
      "name": "Hoppers",
      "tmdbId": 1327819,
      "type": "movie",
    },
    {
      "name": "Avatar: Fire and Ash",
      "tmdbId": 83533,
      "type": "movie",
    },
    {
      "name": "Pretty Lethal",
      "tmdbId": 1084187,
      "type": "movie",
    },
    {
      "name": "Humint",
      "tmdbId": 1268127,
      "type": "movie",
    },
    {
      "name": "Shelter",
      "tmdbId": 1290821,
      "type": "movie",
    },
    {
      "name": "Scream 7",
      "tmdbId": 1159559,
      "type": "movie",
    },
    {
      "name": "Send Help",
      "tmdbId": 1198994,
      "type": "movie",
    },
    {
      "name": "The Drama",
      "tmdbId": 1325734,
      "type": "movie",
    },
    {
      "name": ""Wuthering Heights"",
      "tmdbId": 1316092,
      "type": "movie",
    },
    {
      "name": "Ready or Not: Here I Come",
      "tmdbId": 1266127,
      "type": "movie",
    },
    {
      "name": "How to Make a Killing",
      "tmdbId": 467905,
      "type": "movie",
    },
    {
      "name": "They Will Kill You",
      "tmdbId": 1292695,
      "type": "movie",
    },
    {
      "name": "Zootopia 2",
      "tmdbId": 1084242,
      "type": "movie",
    },
    {
      "name": "Pizza Movie",
      "tmdbId": 1493859,
      "type": "movie",
    },
  ],
  "movies": 20,
  "total": 20,
  "tvShows": 0,
}
`;

exports[`Popular Scoring Integration Tests - Real TMDB Data > should score and sort popular media consistently - no user > popular-scoring-no-user 1`] = `
[
  {
    "baseScore": 0.8948,
    "baseTrendingScore": 0.9028,
    "finalScore": 0.8948,
    "finalTrendingScore": 0.9028,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "Your Heart Will Be Broken",
    "tmdbId": 1523145,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.7905,
    "baseTrendingScore": 0.8564,
    "finalScore": 0.7905,
    "finalTrendingScore": 0.8564,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "Project Hail Mary",
    "tmdbId": 687163,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.7698,
    "baseTrendingScore": 0.855,
    "finalScore": 0.7698,
    "finalTrendingScore": 0.855,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "The Super Mario Galaxy Movie",
    "tmdbId": 1226863,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.7921,
    "baseTrendingScore": 0.8528,
    "finalScore": 0.7921,
    "finalTrendingScore": 0.8528,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "Mike & Nick & Nick & Alice",
    "tmdbId": 1115544,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.7808,
    "baseTrendingScore": 0.8388,
    "finalScore": 0.7808,
    "finalTrendingScore": 0.8388,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "Crime 101",
    "tmdbId": 1171145,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.7895,
    "baseTrendingScore": 0.832,
    "finalScore": 0.7895,
    "finalTrendingScore": 0.832,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "GOAT",
    "tmdbId": 1297842,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.7762,
    "baseTrendingScore": 0.8303,
    "finalScore": 0.7762,
    "finalTrendingScore": 0.8303,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "Hoppers",
    "tmdbId": 1327819,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.8036,
    "baseTrendingScore": 0.83,
    "finalScore": 0.8036,
    "finalTrendingScore": 0.83,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "Avatar: Fire and Ash",
    "tmdbId": 83533,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.7689,
    "baseTrendingScore": 0.8224,
    "finalScore": 0.7689,
    "finalTrendingScore": 0.8224,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "Pretty Lethal",
    "tmdbId": 1084187,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.7527,
    "baseTrendingScore": 0.8019,
    "finalScore": 0.7527,
    "finalTrendingScore": 0.8019,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "Humint",
    "tmdbId": 1268127,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.7641,
    "baseTrendingScore": 0.8003,
    "finalScore": 0.7641,
    "finalTrendingScore": 0.8003,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "Shelter",
    "tmdbId": 1290821,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.7097,
    "baseTrendingScore": 0.7969,
    "finalScore": 0.7097,
    "finalTrendingScore": 0.7969,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "Scream 7",
    "tmdbId": 1159559,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.7184,
    "baseTrendingScore": 0.7742,
    "finalScore": 0.7184,
    "finalTrendingScore": 0.7742,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "Send Help",
    "tmdbId": 1198994,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.6455,
    "baseTrendingScore": 0.7692,
    "finalScore": 0.6455,
    "finalTrendingScore": 0.7692,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "The Drama",
    "tmdbId": 1325734,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.6857,
    "baseTrendingScore": 0.7677,
    "finalScore": 0.6857,
    "finalTrendingScore": 0.7677,
    "genreScore": 0,
    "keywordScore": 0,
    "name": ""Wuthering Heights"",
    "tmdbId": 1316092,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.6736,
    "baseTrendingScore": 0.7584,
    "finalScore": 0.6736,
    "finalTrendingScore": 0.7584,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "Ready or Not: Here I Come",
    "tmdbId": 1266127,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.6822,
    "baseTrendingScore": 0.7515,
    "finalScore": 0.6822,
    "finalTrendingScore": 0.7515,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "How to Make a Killing",
    "tmdbId": 467905,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.6546,
    "baseTrendingScore": 0.7481,
    "finalScore": 0.6546,
    "finalTrendingScore": 0.7481,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "They Will Kill You",
    "tmdbId": 1292695,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.7206,
    "baseTrendingScore": 0.7419,
    "finalScore": 0.7206,
    "finalTrendingScore": 0.7419,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "Zootopia 2",
    "tmdbId": 1084242,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.4988,
    "baseTrendingScore": 0.6544,
    "finalScore": 0.4988,
    "finalTrendingScore": 0.6544,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "Pizza Movie",
    "tmdbId": 1493859,
    "type": "movie",
    "userScore": 0,
  },
]
`;

exports[`Popular Scoring Integration Tests - Real TMDB Data > should score and sort popular media with user preferences > popular-scoring-with-user-preferences 1`] = `
[
  {
    "baseScore": 0.7689,
    "finalScore": 0.8297,
    "finalTrendingScore": 0.8672,
    "genreScore": 0.9715,
    "keywordScore": 0.9715,
    "name": "Pretty Lethal",
    "tmdbId": 1084187,
    "type": "movie",
    "userScore": 0.9715,
  },
  {
    "baseScore": 0.7527,
    "finalScore": 0.8253,
    "finalTrendingScore": 0.8598,
    "genreScore": 0.9949,
    "keywordScore": 0.9949,
    "name": "Humint",
    "tmdbId": 1268127,
    "type": "movie",
    "userScore": 0.9949,
  },
  {
    "baseScore": 0.7641,
    "finalScore": 0.8263,
    "finalTrendingScore": 0.8517,
    "genreScore": 0.9715,
    "keywordScore": 0.9715,
    "name": "Shelter",
    "tmdbId": 1290821,
    "type": "movie",
    "userScore": 0.9715,
  },
  {
    "baseScore": 0.8948,
    "finalScore": 0.8362,
    "finalTrendingScore": 0.8417,
    "genreScore": 0.6993,
    "keywordScore": 0.6993,
    "name": "Your Heart Will Be Broken",
    "tmdbId": 1523145,
    "type": "movie",
    "userScore": 0.6993,
  },
  {
    "baseScore": 0.7808,
    "finalScore": 0.7751,
    "finalTrendingScore": 0.8157,
    "genreScore": 0.7616,
    "keywordScore": 0.7616,
    "name": "Crime 101",
    "tmdbId": 1171145,
    "type": "movie",
    "userScore": 0.7616,
  },
  {
    "baseScore": 0.6857,
    "finalScore": 0.6898,
    "finalTrendingScore": 0.7472,
    "genreScore": 0.6993,
    "keywordScore": 0.6993,
    "name": ""Wuthering Heights"",
    "tmdbId": 1316092,
    "type": "movie",
    "userScore": 0.6993,
  },
  {
    "baseScore": 0.7347,
    "finalScore": 0.8057,
    "finalTrendingScore": 0.721,
    "genreScore": 0.9715,
    "keywordScore": 0.9715,
    "name": "War Machine",
    "tmdbId": 1265609,
    "type": "movie",
    "userScore": 0.9715,
  },
  {
    "baseScore": 0.6723,
    "finalScore": 0.762,
    "finalTrendingScore": 0.6874,
    "genreScore": 0.9715,
    "keywordScore": 0.9715,
    "name": "Mercy",
    "tmdbId": 1236153,
    "type": "movie",
    "userScore": 0.9715,
  },
  {
    "baseScore": 0.7176,
    "finalScore": 0.7121,
    "finalTrendingScore": 0.6393,
    "genreScore": 0.6993,
    "keywordScore": 0.6993,
    "name": "Peaky Blinders: The Immortal Man",
    "tmdbId": 875828,
    "type": "movie",
    "userScore": 0.6993,
  },
  {
    "baseScore": 0.7151,
    "finalScore": 0.7291,
    "finalTrendingScore": 0.6384,
    "genreScore": 0.7616,
    "keywordScore": 0.7616,
    "name": "Greenland 2: Migration",
    "tmdbId": 840464,
    "type": "movie",
    "userScore": 0.7616,
  },
  {
    "baseScore": 0.7162,
    "finalScore": 0.7434,
    "finalTrendingScore": 0.6111,
    "genreScore": 0.8069,
    "keywordScore": 0.8069,
    "name": "Demon Slayer: Kimetsu no Yaiba Infinity Castle",
    "tmdbId": 1311031,
    "type": "movie",
    "userScore": 0.8069,
  },
  {
    "baseScore": 0.7905,
    "finalScore": 0.5534,
    "finalTrendingScore": 0.5995,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "Project Hail Mary",
    "tmdbId": 687163,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.6546,
    "finalScore": 0.5323,
    "finalTrendingScore": 0.5977,
    "genreScore": 0.2468,
    "keywordScore": 0.2468,
    "name": "They Will Kill You",
    "tmdbId": 1292695,
    "type": "movie",
    "userScore": 0.2468,
  },
  {
    "baseScore": 0.7184,
    "finalScore": 0.5429,
    "finalTrendingScore": 0.5819,
    "genreScore": 0.1332,
    "keywordScore": 0.1332,
    "name": "Send Help",
    "tmdbId": 1198994,
    "type": "movie",
    "userScore": 0.1332,
  },
  {
    "baseScore": 0.8036,
    "finalScore": 0.5625,
    "finalTrendingScore": 0.581,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "Avatar: Fire and Ash",
    "tmdbId": 83533,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.6822,
    "finalScore": 0.5175,
    "finalTrendingScore": 0.566,
    "genreScore": 0.1332,
    "keywordScore": 0.1332,
    "name": "How to Make a Killing",
    "tmdbId": 467905,
    "type": "movie",
    "userScore": 0.1332,
  },
  {
    "baseScore": 0.7097,
    "finalScore": 0.4968,
    "finalTrendingScore": 0.5578,
    "genreScore": 0,
    "keywordScore": 0,
    "name": "Scream 7",
    "tmdbId": 1159559,
    "type": "movie",
    "userScore": 0,
  },
  {
    "baseScore": 0.8267,
    "finalScore": 0.7885,
    "finalTrendingScore": 0.557,
    "genreScore": 0.6993,
    "keywordScore": 0.6993,
    "name": "Supernatural",
    "tmdbId": 1622,
    "type": "tv",
    "userScore": 0.6993,
  },
  {
    "baseScore": 0.8229,
    "finalScore": 0.7859,
    "finalTrendingScore": 0.5554,
    "genreScore": 0.6993,
    "keywordScore": 0.6993,
    "name": "Grey's Anatomy",
    "tmdbId": 1416,
    "type": "tv",
    "userScore": 0.6993,
  },
  {
    "baseScore": 0.8198,
    "finalScore": 0.7837,
    "finalTrendingScore": 0.5541,
    "genreScore": 0.6993,
    "keywordScore": 0.6993,
    "name": "House",
    "tmdbId": 1408,
    "type": "tv",
    "userScore": 0.6993,
  },
]
`;
